--- a/app/client/html/base.html
+++ b/app/client/html/base.html
@@ -1,5 +1,5 @@
 <template name="base">
-  <div class="container" style="height:95%">
+  <div class="container-fluid">
     <div class="navbar">
       <div class="navbar-inner" style="background-color:#dceaf4">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -18,8 +18,8 @@
         {{/if}}
       </div>
     </div>
-    <div class="row-fluid" style="height:100%">
-      <div class="span12" style="height:100%">
+    <div class="row-fluid">
+      <div class="span12">
         {{yield}}
       </div>
     </div>
