--- a/app/client/html/editor.html
+++ b/app/client/html/editor.html
@@ -10,25 +10,41 @@
 </template>
 
 <template name="editor">
-  <div class="container-fluid" style="margin-left:auto; margin-right:auto; width:80%">
-    <div class="row-fluid">
-      <div class="span4">
-        <h4>{{episode_name}}</h4>
+  <div class="row-fluid" style="margin-left:auto; margin-right:auto; width:90%">
+    <div class="span11">
+      <div class="row-fluid">
+        <div class="span4">
+          <h4>{{episode_name}}</h4>
+        </div>
+        <div class="span1">
+          <h4 style="text-align:center; font-size:18px">from</h4>
+        </div>
+        <div class="span7">
+          <h4> {{show_name}} {{episode_number}}</h4>
+        </div>
       </div>
-      <div class="span1">
-        <h4 style="text-align:center; font-size:18px">from</h4>
-      </div>
-      <div class="span7">
-        <h4> {{show_name}} {{episode_number}}</h4>
+      <div class="row-fluid">
+        {{#with url}}
+        {{> player}}
+        {{/with}}
       </div>
     </div>
-    <div class="row-fluid">
-      {{#with url}}
-      {{> player}}
-      {{/with}}
+    <div class="span1">
+      {{> hotkeys}}
     </div>
   </div>
 </template>
 
 <template name="player">
+  <video id="player" class="video-js vjs-default-skin vjs-big-play-centered"
+  width="400" height="100" data-setup='{"controls":true, "preload":"auto", "autoplay":false}'>
+
+    <source src="{{url}}" type="http://video-js.zencoder.com/oceans-clip.mp4" type='audo/mp3'' />
+  </video>
+</template>
+
+<template name="hotkeys">
+  <div id="hotkey_instructions">
+    <h5>Hotkeys</h5>
+  </div>
 </template>
