--- a/app/client/html/editor.html
+++ b/app/client/html/editor.html
@@ -1,31 +1,20 @@
-<template name="testEditor">
-  <video id="example_video_1" class="video-js vjs-default-skin"
-  controls preload="auto" width="640" height="264"
-  poster="http://video-js.zencoder.com/oceans-clip.png"
-  data-setup='{"controls":true}'>
-    <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
-    <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
-    <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
-  </video>
-</template>
-
 <template name="editor">
   <div class="row-fluid" style="margin-left:auto; margin-right:auto; width:90%">
     <div class="span11">
       <div class="row-fluid">
         <div class="span4">
-          <h4>{{episode_name}}</h4>
+          <h4>{{episode.name}}</h4>
         </div>
         <div class="span1">
           <h4 style="text-align:center; font-size:18px">from</h4>
         </div>
         <div class="span7">
-          <h4> {{show_name}} {{episode_number}}</h4>
+          <h4> {{show.name}} {{episode.number}}</h4>
         </div>
       </div>
       <div class="row-fluid">
-        {{#with url}}
-        {{> player}}
+        {{#with episode}}
+          {{> player}}
         {{/with}}
       </div>
     </div>
@@ -37,9 +26,8 @@
 
 <template name="player">
   <video id="player" class="video-js vjs-default-skin vjs-big-play-centered"
-  width="400" height="100" data-setup='{"controls":true, "preload":"auto", "autoplay":false}'>
-
-    <source src="{{url}}" type="http://video-js.zencoder.com/oceans-clip.mp4" type='audo/mp3'' />
+    width="500" height="100" data-setup='{"controls":true, "preload":"auto", "autoplay":false}' >
+    <source src="{{this.s3}}" type='audio/mp3' />
   </video>
 </template>
 
