fixed editor template rendering so player always loads

--- a/app/client/html/editor.html
+++ b/app/client/html/editor.html
@@ -26,7 +26,7 @@
 
 <template name="player">
   <video id="player" class="video-js vjs-default-skin vjs-big-play-centered"
-    width="500" height="100" data-setup='{"controls":true, "preload":"auto", "autoplay":false}' >
+    width="500" height="100" >
     <source src="{{this.s3}}" type='audio/mp3' />
   </video>
 </template>
