--- a/app/client/html/editor.html
+++ b/app/client/html/editor.html
@@ -1,7 +1,7 @@
 <template name="editor">
   <div class="container-fluid">
     <div class="row-fluid">
-      <div class="span10">
+      <div class="span10 offset2">
         <hr>
         <div class="row-fluid">
           <div style="inline-block;">
@@ -13,44 +13,45 @@
         <hr>
       </div>
     </div>
-  </div>
 
-  <div class="container-fluid">
     <div class="row-fluid">
+      <div class="span2">
+        <div class="row-fluid">
+          {{> timer_button}}
+        </div>
+        <div class="row-fluid" style="margin-top:15px">
+          {{> hotkeys}}
+        </div>
+      </div>
       <div class="span10">
         <div class="row-fluid">
-          <div class="span2">
-            {{> timer_button}}
-          </div>
-          <div class="span10">
-            {{#with episode}}
-            {{> player}}
-            {{/with}}
-          </div>
+          {{#with episode}}
+          {{> player}}
+          {{/with}}
         </div>
-        <div class="row-fluid" style="margin-top:15px; margin-bottom:5px">
-          <div class="span6 offset2">
+        <div id="auto_input" class="row-fluid" style="margin-top:15px; margin-bottom:5px">
+          <div class="span7">
             <div class="row-fluid">
-              <div class="span4">
+              <div style="float:left; margin-right:15px">
                 {{> editor_timing_input start_timing}}
               </div>
-              <div class="span4">
+              <div style="float:left; margin-right:15px">
                 {{> editor_timing_input end_timing}}
               </div>
-              <div class="span2 offset2">
+              <div style="float:right">
                 {{> character_cutoff}}
               </div>
             </div>
           </div>
-          <div class="span4">
+          <div class="span5">
             {{> links_example}}
           </div>
         </div>
         <div class="row-fluid" style="margin-bottom:15px">
-          <div class="span6 offset2">
+          <div class="span7">
             {{> editor_notes}}
           </div>
-          <div class="span4">
+          <div class="span5">
             {{> editor_links}}
           </div>
         </div>
@@ -60,15 +61,12 @@
           </button>
         </div>
       </div>
-      <div class="span2">
-        {{> hotkeys}}
-      </div>
     </div>
   </div>
 </template>
 
 <template name="player">
-  <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" width="auto" height="100">
+  <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" width="auto" height="60">
     <source src="{{this.s3}}" type='audio/mp3' />
   </video>
 </template>
