added fonts, sidebar still not working

--- a/app/client/html/main.html
+++ b/app/client/html/main.html
@@ -2,6 +2,10 @@
   <title>Timelined</title>
   <link href="//vjs.zencdn.net/4.3/video-js.css" rel="stylesheet">
   <script src="//vjs.zencdn.net/4.3/video.js"></script>
+
+  <!-- Fonts -->
+  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C400italic%2C700" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 </head>
 
 <body>
