--- a/app/client/html/base.html
+++ b/app/client/html/base.html
@@ -1,33 +1,33 @@
 <template name="base">
-  <div class="container-fluid">
-    <div class="navbar">
-      <div class="navbar-inner" style="background-color:#dceaf4">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <a class="brand" href="{{pathFor 'home'}}">Timelined</a>
-        <div class="pull-right">
-          <ul id="loginButtons" class="nav">{{loginButtons}}</ul>
-        </div>
-        {{#if hasEditorPermission}}
-        <div class="pull-right">
-          <ul id="editorLink" class="nav"><a href="{{urlFor 'editor'}}">Editor</a></ul>
-        </div>
-        {{/if}}
-      </div>
-    </div>
-    <div class="row-fluid">
-      <div class="span12">
-        {{yield}}
-      </div>
-    </div>
-  </div>
-  <footer style="height:5%; margin-top:10px; margin-bottom:10px">
-  </footer>
-</template>
+    <div class="container">
+        <div class="navbar navbar-default">
+            <div class="navbar-header"><a class="navbar-brand" href="{{pathFor 'home'}}">Timelined</a><a class="navbar-toggle"
+                data-toggle="collapse" data-target=".navbar-collapse">
 
+          <span class="glyphicon glyphicon-bar"></span>
+
+          <span class="glyphicon glyphicon-bar"></span>
+
+          <span class="glyphicon glyphicon-bar"></span>
+
+        </a>
+            </div>
+            <div class="container" style="background-color: #dceaf4;">
+                <div class="pull-right">
+                    <ul id="loginButtons" class="nav navbar-nav">{{loginButtons}}</ul>
+                </div>{{#if hasEditorPermission}}
+                <div class="pull-right">
+                    <ul id="editorLink" class="nav navbar-nav"><a href="{{urlFor 'editor'}}">Editor</a>
+                    </ul>
+                </div>{{/if}}</div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">{{yield}}</div>
+        </div>
+    </div>
+    <footer style="height: 5%; margin-top: 10px; margin-bottom: 10px;"></footer>
+</template>
 <template name="notFound">
-  <p style="margin:auto; text-align:center; width:50%">We didn't find anything. Also, this page is not fleshed out. Please go back; I'm embarrased.</p>
+    <p style="margin: auto; text-align: center; width: 50%;">We didn't find anything. Also, this page is not fleshed out. Please go
+        back; I'm embarrased.</p>
 </template>
