--- a/app/client/html/editor.html
+++ b/app/client/html/editor.html
@@ -1,106 +1,81 @@
 <template name="editor">
-  <div class="container-fluid">
-    <div class="row-fluid">
-      <div class="span10 offset2">
-        <hr>
-        <div class="row-fluid">
-          <div style="inline-block;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 col-lg-offset-2">
+        <hr />
+        <div class="row">
+          <div style="">
             <h4 class="left">{{episode.name}}</h4>
-            <h4 class="left" style="margin-left:10px; margin-right:10px; text-align:center; font-size:18px">from</h4>
+            <h4 class="left" style="margin-left: 10px; margin-right: 10px; text-align: center; font-size: 18px;">from</h4>
             <h4 class="left"> {{show.name}} {{episode.number}}</h4>
           </div>
         </div>
-        <hr>
+        <hr />
       </div>
     </div>
-
-    <div class="row-fluid">
-      <div class="span2">
-        <div class="row-fluid">
-          {{> timer_button}}
-        </div>
-        <div class="row-fluid" style="margin-top:15px">
-          {{> hotkeys}}
-        </div>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="row">{{> timer_button}}</div>
+        <div class="row" style="margin-top: 15px;">{{> hotkeys}}</div>
       </div>
-      <div class="span10">
-        <div class="row-fluid">
-          {{#with episode}}
-          {{> player}}
-          {{/with}}
-        </div>
-        <div id="auto_input" class="row-fluid" style="margin-top:15px;">
-          <div class="span7">
-            <div class="row-fluid">
-              <div style="float:left; margin-right:15px">
-                {{> editor_timing_input start_timing}}
-              </div>
-              <div style="float:left">
-                {{> editor_timing_input end_timing}}
-              </div>
-              <div style="float:right">
-                {{> character_cutoff}}
-              </div>
+      <div class="col-md-10">
+        <div class="row">{{#with episode}} {{> player}} {{/with}}</div>
+        <div id="auto_input" class="row"
+             style="margin-top: 15px;">
+          <div class="col-md-7">
+            <div class="row">
+              <div style="float: left; margin-right: 15px;">{{>editor_timing_input start_timing}}</div>
+              <div style="float: left;">{{>editor_timing_input end_timing}}</div>
+              <div style="float: right;">{{>character_cutoff}}</div>
             </div>
           </div>
-          <div class="span5" style="margin-top:-3px">
-            {{> links_example}}
-          </div>
+          <div class="col-md-5" style="margin-top: -3px;">{{>links_example}}</div>
         </div>
-        <div class="row-fluid" style="margin-bottom:15px">
-          <div class="span7">
-            {{> editor_notes}}
-          </div>
-          <div class="span5">
-            {{> editor_links}}
-          </div>
+        <div class="row" style="margin-bottom: 15px;">
+          <div class="col-md-7">{{>editor_notes}}</div>
+          <div class="col-md-5">{{>editor_links}}</div>
         </div>
-        <div class="row-fluid">
-          <button class="btn btn-block btn-editor" id="submit_clip">
-            Submit Clip Notes and Links
-          </button>
+        <div class="row">
+          <button class="btn btn-block btn-editor" id="submit_clip">Submit Clip Notes and Links</button>
         </div>
-        <hr style="style-two">
+        <hr style="" />
       </div>
     </div>
     {{#with episode}}
-      {{#each completed_clips}}
-        {{> editable_clip}}
-      {{/each}}
+    {{#each completed_clips}}
+    {{> editable_clip}}
+    {{/each}}
     {{/with}}
   </div>
 </template>
 
 <template name="player">
   <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" width="auto" height="85">
-    <source src="{{this.s3}}" type='audio/mp3' />
+    <source src="{{this.s3}}" type="audio/mp3"></source>
   </video>
 </template>
 
 <template name="hotkeys">
   <div id="hotkey_instructions">
-    <h5 style="margin-left:20px;">Hotkeys</h5>
+    <h5 style="margin-left: 20px;">Hotkeys</h5>
   </div>
 </template>
 
 <template name="timer_button">
-  <button class="btn btn-block btn-editor" id="timer_button" href="#">
-    Start Clip
-  </button>
+  <button class="btn btn-block btn-editor" id="timer_button" href="#">Start Clip</button>
 </template>
 
 <template name="editor_timing_input">
-  <div class="input-group">
-    <span class="input-group-addon">{{label}}</span>
-    <input class="editor_timing_input" type="text" id="{{id}}" placeholder="00:00:00" style="margin-bottom:4px">
+  <div class="input-group"> <span class="input-group-addon">{{label}}</span>
+    <input class="editor_timing_input" type="text" id="{{id}}" placeholder="00:00:00" style="margin-bottom: 4px;"/>
   </div>
 </template>
 
 <template name="character_cutoff">
   <div id="character_cutoff">
-    <span style="float:left; color:{{current_notes_color}};">{{current_char_counter}}</span>
-    <span style="float:left">&nbsp;/&nbsp;</span>
-    <span style="float:left">{{max_chars}}</span>
+    <span>{{current_char_counter}}</span>
+    <span style="float: left;">&nbsp;/&nbsp;</span>
+    <span style="float: left;">{{max_chars}}</span>
   </div>
 </template>
 
@@ -115,9 +90,9 @@
 </template>
 
 <template name="links_example">
-  <p class="link_instruction">Events or People: Insert Wikipedia Link URL</p>
-  <p class="link_instruction">Products: Insert Amazon Link URL</p>
-  <p class="link_instruction">Youtube: Insert Youtube URL</p>
+    <p class="link_instruction">Events or People: Insert Wikipedia Link URL</p>
+    <p class="link_instruction">Products: Insert Amazon Link URL</p>
+    <p class="link_instruction">Youtube: Insert Youtube URL</p>
 </template>
 
 <template name="editable_clip">
