--- a/app/client/html/editor.html
+++ b/app/client/html/editor.html
@@ -1,23 +1,26 @@
 <template name="editor">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-10 col-lg-offset-2">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-2">
+      <div class="row">
         <hr />
-        <div class="row">
-          <div style="">
-            <h4 class="left">{{episode.name}}</h4>
-            <h4 class="left" style="margin-left: 10px; margin-right: 10px; text-align: center; font-size: 18px;">from</h4>
-            <h4 class="left"> {{show.name}} {{episode.number}}</h4>
-          </div>
+      </div>
+      <div class="row">
+        <div style="">
+          <h4 class="left">{{episode.name}}</h4>
+          <h4 class="left" style="margin-left: 10px; margin-right: 10px; text-align: center; font-size: 18px;">from</h4>
+          <h4 class="left"> {{show.name}} {{episode.number}}</h4>
         </div>
+      </div>
+      <div class="row">
         <hr />
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-2">
-        <div class="row">{{> timer_button}}</div>
-        <div class="row" style="margin-top: 15px;">{{> hotkeys}}</div>
-      </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2">
+      <div class="row">{{> timer_button}}</div>
+      <div class="row" style="margin-top: 15px;">{{> hotkeys}}</div>
+    </div>
       <div class="col-md-10">
         <div class="row">{{#with episode}} {{> player}} {{/with}}</div>
         <div id="auto_input" class="row"
@@ -29,14 +32,20 @@
               <div style="float: right;">{{>character_cutoff}}</div>
             </div>
           </div>
-          <div class="col-md-5" style="margin-top: -3px;">{{>links_example}}</div>
+          <div class="col-md-5">{{>links_example}}</div>
         </div>
         <div class="row" style="margin-bottom: 15px;">
-          <div class="col-md-7">{{>editor_notes}}</div>
-          <div class="col-md-5">{{>editor_links}}</div>
+          <div class="col-md-7">
+            <div class="row">
+              {{>editor_notes}}
+            </div>
+          </div>
+          <div class="col-md-5" style="padding-right:0px">
+              {{>editor_links}}
+          </div>
         </div>
         <div class="row">
-          <button class="btn btn-block btn-editor" id="submit_clip">Submit Clip Notes and Links</button>
+          <button class="btn btn-block btn-primary" id="submit_clip">Submit Clip Notes and Links</button>
         </div>
         <hr style="" />
       </div>
@@ -46,7 +55,6 @@
     {{> editable_clip}}
     {{/each}}
     {{/with}}
-  </div>
 </template>
 
 <template name="player">
@@ -62,20 +70,21 @@
 </template>
 
 <template name="timer_button">
-  <button class="btn btn-block btn-editor" id="timer_button" href="#">Start Clip</button>
+  <button class="btn btn-block btn-primary" id="timer_button" href="#">Start Clip</button>
 </template>
 
 <template name="editor_timing_input">
-  <div class="input-group"> <span class="input-group-addon">{{label}}</span>
-    <input class="editor_timing_input" type="text" id="{{id}}" placeholder="00:00:00" style="margin-bottom: 4px;"/>
+  <div class="input-group input-group-sm">
+    <span class="input-group-addon" style="width:46px">{{label}}</span>
+    <input class="form-control" type="text" id="{{id}}" style="width:65px" placeholder="00:00:00">
   </div>
 </template>
 
 <template name="character_cutoff">
   <div id="character_cutoff">
-    <span>{{current_char_counter}}</span>
-    <span style="float: left;">&nbsp;/&nbsp;</span>
-    <span style="float: left;">{{max_chars}}</span>
+    <span style="color:{{current_notes_color}}">{{current_char_counter}}</span>
+    <span>&nbsp;/&nbsp;</span>
+    <span>{{max_chars}}</span>
   </div>
 </template>
 
@@ -85,14 +94,14 @@
 </template>
 
 <template name="editor_links">
-  <small class="box_title"><i>Links</i></small>
+  <small class="box_title"><i>Links, one url per line</i></small>
   <div id="links" class="editor_text" contenteditable="true"></div>
 </template>
 
 <template name="links_example">
-    <p class="link_instruction">Events or People: Insert Wikipedia Link URL</p>
-    <p class="link_instruction">Products: Insert Amazon Link URL</p>
-    <p class="link_instruction">Youtube: Insert Youtube URL</p>
+  <p class="link_instruction">Events or People: Wikipedia</p>
+  <p class="link_instruction">Products: Amazon</p>
+  <p class="link_instruction">Video: Youtube</p>
 </template>
 
 <template name="editable_clip">
