uninstalled package accounts-ui-bootstrap-3, installed dev branch of meteor-accounts-ui-bootstrap-3 locally, fixes modal-background problem for 3rd party logins

--- a/app/client/html/base.html
+++ b/app/client/html/base.html
@@ -2,8 +2,7 @@
   <div id="secondary" class="col-sm-3 sidebar" style="display: none;">
     <aside>
       <div class="about">
-        <h4>About us</h4>
-        <p>blah blah</p>
+        <h4>{{loginButtons}}</h4>
       </div>
     </aside>
   </div> <!-- /#secondary -->
