--- a/app/client/index.html
+++ b/app/client/index.html
@@ -4,8 +4,8 @@
   <script src="//vjs.zencdn.net/4.3/video.js"></script>
 
   <!-- Fonts -->
-  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C400italic%2C700" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C400italic%2C700" rel="stylesheet">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 </head>
 
 <body>
