--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,8 @@
   <title>Timelined</title>
 
   <!-- Fonts -->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C400italic%2C700" rel="stylesheet">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C400italic%2C700">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Varela+Round">
 </head>
 
 <body>
